--- a/latex/chapter-implementation.tex
+++ b/latex/chapter-implementation.tex
@@ -2,14 +2,12 @@
 \index{Implementation%
 @\emph{Implementation}}%
 
-\section{Layout and Structure}
-\label{sec:layout}
-
+\section{Overview}
 Speakur\index{Speakur} is delivered as a single Custom Element\index{Custom Elements}, \tcode{<speakur-discussion>}\index{<speakur-discussion>}.
-You must import the tag with \tcode{<link rel=import href=...>} to make it available to place on the page. 
+You import the tag with \tcode{<link rel=import href=...>} to make it available to place on the page. 
 This element has a data-bound\index{data-bound template} \tcode{<template>}\index{<template>} that provides the element's visual representation (shadow DOM).
 Actually, a custom element's representation, or logical DOM\index{Logical DOM}, may consist of both encapsulated shadow DOM\index{Shadow DOM} as well as light DOM\index{Light DOM} that is supplied by the \textit{user} of the custom element and \textit{projected} into the shadow DOM as discussed in section~\ref{bg:shadowdom}.
-In the case of Speakur, the discussion forum is self-contained in terms of content; light DOM is not needed or used in the top-level element.
+In Speakur's case, the discussion forum is self-contained in terms of content; light DOM is not needed or used in the top-level element.
 Speakur's\index{Speakur} options or parameters are controlled with attributes\index{HTML!attributes}:
 
 \begin{lstlisting}[language=HTML5,caption=
@@ -22,6 +20,15 @@ Speakur's\index{Speakur} options or parameters are controlled with attributes\in
    allowAnonymous="true">
  </speakur-discussion>
 \end{lstlisting}
+
+%Speakur is subdivided into a number of components which abstract\index{abstraction} behavior and encapsulate\index{encapsulation} the implementation details.
+%These components use Polymer\index{Polymer} data bindings\index{data-bound template} to reflect state changes between the user interface and local and remote data models.
+%Security is handled by Firebase authorization rules.
+%Responsive design with \tcode{flex} and \tcode{@media} attributes adjusts the interface automatically for desktop and mobile users.
+%Speakur takes advantage of data bindings to offer localization features that instantly update when the language preference is changed.
+
+\section{Layout and Structure}
+\label{sec:layout}
 
 Structurally, Speakur\index{Speakur} consists of JavaScript\index{JavaScript}, HTML, and CSS\index{CSS} files, along with a few other resource types like images and JSON\index{JSON} language files. 
 All of the these internal resources and components are hidden from consumers who only have to import and place the main \tcode{<speakur-discussion>}\index{<speakur-discussion>} element as discussed in section~\ref{publishing} below.
@@ -60,7 +67,7 @@ $User~Interface$\\
 \label{table:speakurcomponents}
 \end{table}
 
-Internally, Speakur\index{Speakur} is composed of a number of sub-components, a partial list of which is found in table~\ref{table:speakurcomponents}. 
+Internally, Speakur\index{Speakur} is composed of a number of sub-components, a partial list of which is found in Table~\ref{table:speakurcomponents}. 
 These components are listed in three broad categories: structural containers, 
 logical services, 
 and user interface\index{user interface (UI)} elements.
@@ -100,8 +107,12 @@ facades, pseudo-OOP\index{object oriented programming (OOP)} base classes and ot
 	\label{f:file_layout}
 \end{figure}
 
-In addition to structural and logical elements, Speakur has a number of user interface (UI)\index{user interface (UI)} custom elements to do things like display an individual user post or show the post composition editor.
-Some of these, like \tcode{<speakur-theme>}, are also `base classes' for other elements,
+In addition to structural and logical elements, 
+Speakur has a number of user interface (UI)\index{user interface (UI)} custom elements to do things like display an individual user post or show the post composition editor.
+Elements are also reused extensively in different contexts; 
+for example \tcode{<speakur-post>} is used for a `live editor preview' inside \tcode{<speakur-compose>} as well as for showing posts in the main \tcode{<speakur-thread-view>.}
+
+Some of Speakur's internal components like \tcode{<speakur-theme>} are also `base classes' for other elements
 in a way that is similar but not identical to classes in object oriented programming (OOP)\index{object oriented programming (OOP)}\footnote{Note that JavaScript\index{JavaScript} itself is \textit{prototype}-based\index{prototype \textit{(JavaScript)}} and does not have traditional classes or inheritance. 
 Similar behavior is obtained by using regular object instances (instead of classes) as the prototype for instantiating new objects.}. 
 Although composition or \textit{has-a} relationships are generally preferred, inheritance or \textit{is-a} relationships can make sense when you truly want to be able to substitute one instance for another.
@@ -116,7 +127,7 @@ One of the defining characteristics of the NoSQL movement is denormalization\ind
 --- that is, the principle of eliminating redundancy is sacrificed in order to gain performance~\cite{sadalage2012}.
 Facts can be defined in more than one place to speed up queries.
 
-For example, in Speakur\index{Speakur}, some information about a post's author 
+For example, some information about a post's author 
 such as their public username, id, and photo url is saved inside each post they write 
 so that it's not necessary to look up this information separately just to display the post.
 One consequence of this is that changing your public name doesn't retroactively change the name on all of your previous posts, just new posts going forward.
@@ -151,12 +162,12 @@ a given record is not guaranteed to follow any particular structure unless this 
 
 \begin{figure}[htb]
 \centering
-\includegraphics[width=\textwidth]{images/firebase_admin_posts_b.png}
+\includegraphics[width=0.95\textwidth]{images/firebase_admin_posts_b.png}
 \caption{Structure of the \tcode{posts} table.}
 \label{f:firebase_admin_posts}
 \end{figure}
 
-The key structure column in table~\ref{table:speakurtables} signifies the meaning of the keys underneath a table. 
+The key structure column in Table~\ref{table:speakurtables} signifies the meaning of the keys underneath a table. 
 For example, the main \tcode{posts} table has a \tcode{\$parent->\$child} key structure, 
 which means that the first layer of keys beneath \tcode{posts} are post \textit{parent} ids, 
 meaning the id of the post that this post is a reply to, 
@@ -172,55 +183,274 @@ Deeply nested data structures are not good for scalability;
 relatively flat tables are best.
 The key structure will become important when we apply security rules in section~\ref{sec:security}.
 
+
 In addition to denormalizing\index{denormalization} the data as necessary, sometimes it is convenient for security reasons to 
 keep related bits of data in separate tables in order to apply different security rules.
 For instance, we want users to be able to modify a post's vote count without being able to modify the post itself.
-The nested and denormalized structure of the tables helps ensure that we only fetch what we need, when we need it.
+The nested and denormalized\index{denormalization} structure of the tables helps ensure that we only fetch what we need, when we need it.
 The flip side is that we need to be aware of these data duplications and update them as necessary, 
 which can be difficult in a more sophisticated application.
+But in the post vote count example, even if a malicious user sets a false count on the globally-visible value,
+we can always recalculate the true count later using the individual user vote records.
 
-\section{Synchronization}
+\section{Component Synchronization}
 \label{sec:sync}
 
-Speakur\index{Speakur} consists of a number of Polymer components which break down the problem of presenting a discussion forum into smaller tasks.
-Some of these components are listed in table~\ref{table:speakurcomponents}.
-They form a hierarchy with <speakur-discussion> at the top (root). 
+Speakur\index{Speakur} consists of a number of Polymer\index{Polymer} components which break down the problem of presenting a discussion forum into smaller tasks.
+Some of these components are listed in Table~\ref{table:speakurcomponents}.
+They form a hierarchy with \tcode{<speakur-discussion>}\index{<speakur-discussion>} at the top (root). 
 Figure~\ref{f:component_layout} illustrates this, with many components omitted for brevity.
 
 \begin{figure}[htb]
-	\centerline{\includegraphics[width=6.2in]{images/components.png}}
+	\centerline{\includegraphics[width=6in]{images/components.png}}
 	\caption{Speakur component hierarchy (partial).}
 	\label{f:component_layout}
 \end{figure}
 
-Blah blah...
+The general data flow is that bindings carry information \textit{down} from parent to child, and changes flow \textit{up} in the form of events and observed mutations.
+Two-way bindings are possible in that a child element can modify a bound variable and the value would be reflected in the parent and vice-versa, 
+but in some scenarios this makes it difficult to determine an `authoritative' value 
+or cause other circularity problems.
+For this reason, bindings should be used one-way across component lines,
+but two-way bindings are useful within a component to update its `data model' automatically from user input~\cite{polymercontributors2015-b}.
 
+Each component keeps its own \tcode{<firebase-element>}\index{<firebase-element>} to pull data from Firebase\index{Firebase} as needed,
+or in some cases the relevant object is passed in as a binding from a parent element that has its own \tcode{<firebase-element>}\index{<firebase-element>}.
+This keeps database specific knowledge localized to each component.
+Speakur\index{Speakur} as a whole doesn't know or care what storage solution its individual components use whether Firebase\index{Firebase} or another API\index{API}.
 
 \subsection{Data Bindings and Events}
 \label{sec:databindings}
+From an MVC\index{model-view-controller} viewpoint, a Polymer element with instance variables \textit{is} the `model'.
+The element's data-bound\index{data-bound template} \tcode{<template>}\index{<template>} is the `view', 
+and the JavaScript\index{JavaScript} code is the `controller'.
+Data bindings carry data information down from parent to child while DOM\index{DOM} events\index{event notification} propagate upwards.
+
+Using \tcode{<firebase-element>}\index{<firebase-element>} isolates each component from direct interaction with the general purpose Firebase\index{Firebase} JavaScript library
+and ties the database directly into the Polymer\index{Polymer} data binding system.
+Persisting changes is incredibly easy; 
+writing a new value to a variable not only saves it to the database but pushes the change
+to all other `subscribers' --- whoever is viewing that post or other object at the time.
+The \tcode{data=} attribute on 
+\tcode{<firebase-element>}\index{<firebase-element>}
+allows binding a variable in a component to a remote database object:
+
+\begin{lstlisting}[language=HTML5,caption={Binding the \tcode{post} variable to a database record.},label=l:fb_bind,captionpos=below]
+<!-- speakur-post.html -->
+<firebase-element
+   data="{{ post }}"
+   location="{{ fbLocation(firebaseLocation, 'posts', parentId, postId) }}">
+</firebase-element>
+\end{lstlisting}
+
+In the example above, 
+the data retrieved by the \tcode{<firebase-element>}\index{<firebase-element>}
+is bound by the \tcode{\{\{ \}\}} operators to the component's \tcode{post} variable. 
+Any changes to this database object, 
+whether locally or remotely initiated,
+will be reflected in the \tcode{post} variable
+and any associated data-bound\index{data-bound template} \tcode{<template>}\index{<template>}s, 
+and vice-versa.
+Note that the \textit{source} URL of this \tcode{<firebase-element>}\index{<firebase-element>} 
+is itself a \tcode{\{\{ \}\}} bound variable (\tcode{location}) which finds the location with the \tcode{fbLocation} method.
+Any changes in the variables \tcode{firebase\-Location}, \tcode{parentId} or \tcode{postId} will cause \tcode{fbLocation} to be recomputed,
+which could in turn cause \tcode{post} to pull from a different location.
+
+DOM events carry state changes up from children to elements above it.
+Polymer provides the \tcode{fire()} method to trigger a named event with extra data attached.
+This is a convenience wrapper since it can be done with pure JavaScript\index{JavaScript}.
+An example of using \tcode{fire()} can be found in the language selection dialog from Figure~\ref{f:lang}.
+The language selection UI is handled in the \tcode{<speakur-lang-select>} component,
+which is only concerned with presenting the language chooser and not with handling the actual localization,
+reinforcing separation of concerns.
+When the user selects a new language it fires an event that bubbles up to the top level \tcode{<speakur-discussion>} element:
+
+\begin{lstlisting}[language=JavaScript,caption={Firing a language change event.},label=l:fire_event,captionpos=below]
+// speakur-lang-select.js
+domReady: function () {
+    // listen for core-select event fired by the dropdown menu
+    this.$.menu.addEventListener('core-select', function (e) {
+        if (e.detail.isSelected) {
+            var oldLocale = this.locale;
+            var newLocale = e.detail.item.id;
+            
+            // Tell container(s) the language selection changed
+            this.fire('speakur-locale-change', 
+               {oldLocale: oldLocale, newLocale: newLocale});
+        }
+    });
+}
+\end{lstlisting}
+
+A handler in the top level container (\tcode{<speakur-discussion>}\index{<speakur-discussion>}) responds to this named event (\tcode{speakur-locale-change}) and tells the internationalization component to update the language.
+This in turn sets the \tcode{\textbf{lc}} (locale) property in the base element.
+This property is then used in translation expressions as discussed in section~\ref{sec:i18n} below.
 
 \subsection{Data-Bound Templates}
+Speakur translates internal variables (the model) into visible output with the use of data-bound templates\index{data-bound template}.
+This is similar in effect to the model-view-controller\index{model-view-controller} design pattern.
+As mentioned above, the custom element itself is the `model' and its \tcode{<template>} is the view.
+This allows embedding variables directly in the HTML representation of a component as shown in Listing~\ref{l:dbtemplate}.
+
+\begin{lstlisting}[language=HTML5,caption={User interface control with data bindings (edit post link).},label=l:bind_ui,captionpos=below]
+<!-- speakur-post-footer.html -->
+<template 
+ if="{{canEditPost(post, globals.profile, globals.isAdmin)}}">
+  <div on-click="{{editPost}}">
+    {{ 'Edit' | $$(lc) }}
+  </div>
+</template>
+\end{lstlisting}
+
+There are three data bindings with \tcode{\{\{ \}\}} in the example above:
+\begin{enumerate}
+\item The \tcode{<template>} binds to \tcode{canEditPost} to determine if the \tcode{<div>} containing the Edit link should be shown on a post. I.e, is this user allowed to edit this post.
+\item The \tcode{<div>} binds its click event to \tcode{editPost} so it functions as a link. The \tcode{editPost} method will be called when this is clicked.
+\item The inner content of the \tcode{<div>} (its light DOM) is bound to a Polymer filter expression that translates ``Edit'' to the current language. 
+\end{enumerate}
+
+The \tcode{\{\{ \}\}} operators are not limited to binding to simple variables.
+Polymer supports a rich expression language within binding operators. 
+That said, keeping \tcode{<template>} expressions simple and moving more complex logic to methods in the JavaScript controller helps uphold separation of concerns between controller and view.
 
 \section{Security}
 \label{sec:security}
+Because Firebase\index{Firebase} is Speakur's only `server', 
+most of its security\index{security} rests in Firebase's authentication and authorization rules.
+Obviously the user interface should be crafted such that undesirable actions are not presented as options for the user,
+but one also has to consider malicious users stepping outside of the allowed interface
+and/or directly accessing the REST\index{REST} API\index{API}.
+Authentication ensures that we know the identity of anyone making database changes,
+and the Firebase\index{Firebase} security rules enforce authorization requirements.
 
 \subsection{Authentication}
+Speakur\index{Speakur} currently supports signing in users (authenticating\index{authentication}) with Google\index{Google} and Facebook\index{Facebook} profiles.
+This avoids the need to create a dedicated user registration and password system by using single sign-on\index{single sign-on (SSO)} with popular Internet identity providers.
+In this scenario, Google or Facebook is an OAuth\index{OAuth} identity provider (IdP),
+and Firebase\index{Firebase} (standing in for Speakur) is a service provider (SP).
+The user authenticates directly to the chosen IdP (e.g. Facebook\index{Facebook}) and their password is never sent to Firebase or Speakur.
+Future versions may support additional identity providers like GitHub\index{GitHub} and Twitter\index{Twitter} as well as Firebase's\index{Firebase} own simple user registration system.
+
+Inside Speakur, authentication is handled by the \tcode{<firebase-login>} element, provided by \tcode{<firebase-element>}~\cite{polymercontributors2015-c}.
+A binding is set up between that and the \tcode{user} variable in \tcode{<speakur-discussion>}\index{<speakur-discussion>} so that when user authentication is completed, the \tcode{user} variable contains an object with user properties like their authentication ID and other data.
+The authentication\index{authentication} session is automatically used by any \tcode{<firebase-element>} anywhere on the page provided their \tcode{location=} points to the same database URL.
 
 \subsection{Firebase Security Policy Rules}
 \label{sec:fbsecurity}
 
+Authorization to perform any given action in the Speakur database is determined by consulting the nested rules in the 
+JSON-formatted\index{JSON} security\index{security} object, 
+whose documentation can be found at~\cite{firebasecontributors2015-a}.
+These rules can be entered directly into the Firebase\index{Firebase} administrative console
+and a reference copy can be found in the Speakur\index{Speakur} source code repository under the file \tcode{security-rules.json}~\cite{landers2015-c}.
+
+The structure of the security rule object mirrors the nested hierarchy of the Firebase database itself.
+Each top level key maps to rules for a particular database ``table'' like \tcode{posts}.
+These fall into three categories: read, write, and validation rules.
+These are each structured as boolean expressions (predicates) that determine whether the given action is allowed.
+
+\begin{enumerate}
+\item \tcode{.read} rules determine whether a given record can be retrieved by the current user.
+\item \tcode{.write} rules authorize the creation, modification and deletion of a record.
+\item \tcode{.validate} rules check whether a record is correctly \textit{structured}.
+\end{enumerate}
+
+Write rules determine whether a given create, modify or delete is allowed. 
+Validate rules are run after a write rule has passed in order to check whether the new version is correctly structured per business rules or requirements.
+Each expression has access to several pre-defined variables including snapshots of the database as it exists both before and after the change would be applied.
+For example, Listing~\ref{l:sec_rule1} shows rules for the \tcode{posts} table.
+The \tcode{.write} rule asserts that anyone can create a new post, 
+but modifying an existing post requires that you (\tcode{auth.uid}) are either the post owner or an administrator.
+The \tcode{.validate} rule ensures that all posts contain at least 4 keys: \tcode{threadId}, \tcode{text}, \tcode{author}, and \tcode{timestamp}.
+More sophisticated rules and validations are possible, and rules can be nested, 
+but it can be unwieldy to fit a large set of rules into a single predicate expression, 
+making them more difficult to understand and maintain.
+
 \section{Internationalization}
 \label{sec:i18n}
+The process of customizing an application for local languages and customs is called internationalization (i18n) and localiation (l10n)\footnote{
+\textit{Internationalization} refers to the process of \textbf{enabling} an app to be localized, and localization refers to adapting it to a \textbf{specific} locale.
+}. 
+Speakur\index{Speakur} offers user interface translations for 15 languages.
+The user can select a new language from the Profile dialog and the interface updates instantly.
+The actual substitution of strings using the currently selected language is handled by the i18next\index{i18next library} JavaScript library, 
+which is abstracted\index{abstraction} behind the custom element wrapper \tcode{<speakur-i18next>}~\cite{i18nextcontributors2015}.
+This wrapper provides a Polymer filter named \tcode{\$\$} which is used in \tcode{\{\{ \}\}} expressions in data-bound templates\index{data-bound template} to translate user-visible UI strings.
+Of course, the users' posts themselves are not translated; just the application's interface strings.
 
-\subsection{Architecture}
-\subsection{Libraries}
+The i18next library loads translation strings out of JSON\index{JSON} files, one for each supported language.
+The current translations were obtained by taking the English language file and passing it through the Microsoft\index{Microsoft} Translation API\index{API} using `Eurgh!'\index{Eurgh},
+a Python\index{Python} package that I wrote for another project.~\cite{landers2015-b}.
+The i18next library includes the ability to handle variable interpolation insertion points and pluralization rules which are important for producing grammatically correct text.
+Here is a short excerpt from the English file followed by the Russian version:
+
+\begin{lstlisting}[language=JavaScript,caption=
+{String resources for internationalization\index{internationalization}.},label=l:i18n,captionpos=below]
+// speakur-en.json
+{
+  "View Comments": null,
+  "replies_count": "__count__ reply",
+  "replies_count_plural": "__count__ replies"
+}
+// speakur-ru.json
+{
+  "View Comments": "Посмотреть комментарии",
+  "replies_count": "ответ __count__",
+  "replies_count_plural": "__count__ ответы"
+}
+\end{lstlisting}
+
+%   "apples_oranges": "Mary has __apples__ apples and __oranges__ oranges.",
+%    "apples_oranges": "Мэри имеет __apples__ яблоки и апельсины __oranges__.",
+
+This example shows that with the \tcode{'View Comments'} key, the corresponding value can be null if the key itself can serve as the text. 
+An example of interpolating two named variables (\tcode{apples} and \tcode{oranges}) is provided, 
+along with another for pluralizing a string based on a numeric count, in this case the number of replies a post has.
+These translation strings would be used in a template like:
+
+\begin{lstlisting}[language=HTML5,caption={Internationalizing a data-bound template.},label=l:i18n_template,captionpos=below]
+<div class='post-replies-count'>
+  {{ 'replies' | $$({count: replyCount}, lc) }}
+</div>
+\end{lstlisting}
+
+\tcode{i18next}\index{i18next library} sees that a \tcode{count} variable is provided to \tcode{\$\$} and looks for the key (replies) with either a \tcode{\_count} or a \tcode{\_count\_plural} suffix depending on the cardinality of \tcode{count}.
+The \tcode{lc} variable reflects the user's current language (locale) setting, such as \tcode{lc=en} for English.
+Interestingly, the \tcode{lc} variable is not required by the \tcode{\$\$} filter at this point,
+but is included in the expression simply to register a value dependency with Polymer\footnote{
+Polymer expression dependencies are implemented internally with DOM mutation observers\index{mutation observers}~\cite{polymercontributors2015-b}.} 
+such that when the locale is changed elsewhere, all dependent expressions are recalculated, or in this case, the strings are re-translated to the current locale.
+In this case it would output something like ``1 reply'' or ``2 replies'' as needed.
+
+%\subsection{Architecture}
+%\subsection{Libraries}
+
+Another important localization feature is provided by the moment.js library\index{moment.js library}, 
+which focuses specifically on localizing \textit{dates and times}.
+The date/time translations into specific languages are not provided by Speakur, 
+but are included in moment.js itself.
+In addition to formatting dates and times (like the time of a post) according to local conventions, 
+it also provides a \tcode{fromNow} function that outputs a localized ``ago'' string --- the amount of time elapsed since a certain point such as ``10 seconds ago'' or ``3 weeks ago''.
+Speakur\index{Speakur} uses this in post headers to show how long ago they were posted,
+and ties them to a timer-based value dependency such that the ``ago time'' updates automatically on the page as time passes. 
+For example, immediately after posting a new reply, its header will say ``posted a few moments ago.'' 
+After a minute it will say ``posted a minute ago'', and so on in idiomatic fashion appropriate to the current language.
 
 \section{Responsive Design}
 \label{sec:responsive}
+As mentioned in section~\ref{bg:mobile}, Speakur\index{Speakur} uses several techniques to achieve a design that automatically responds\index{responsive design} to different devices and screen sizes, 
+including mobile phones.
 
-\subsection{Mobile Users}
+%\subsection{Mobile Users}
 
-\subsection{Accessibility}
+%\subsection{Accessibility}
+
 
 \section{Publishing and Deployment}
 \label{publishing}
+
+Speakur published to \tcode{github.io}, 
+a static web host and content delivery network for GitHub\index{GitHub} projects, 
+which allows users to import the component without hosting it themselves.
+Web authors can also host Speakur's files on their own server if desired.
+
