--- a/latex/codelistings.tex
+++ b/latex/codelistings.tex
@@ -60,14 +60,14 @@
 	<a, </a,
   % More tags...
   <canvas, /canvas>, <svg, <rect, <animateTransform, </rect>, </svg>, <video, <source, <iframe, </iframe, </video, <image, </image>, <template, </template, <my-element, </my-element,
-  <speakur-discussion, </speakur-discussion, <twbs-navbar, </twbs-navbar
+  <speakur-discussion, </speakur-discussion, <twbs-navbar, </twbs-navbar, <firebase-element, </firebase-element
   },
   ndkeywords={
   % General
   =,
   % HTML attributes
   charset=, src=, id=, width=, height=, style=, type=, rel=, href=,
-  firebaseLocation=, xtitle=, initiallyOpen=, allowAnonymous=,
+  firebaseLocation=, xtitle=, initiallyOpen=, allowAnonymous=, location=, data=,
   % SVG attributes
   fill=, attributeName=, begin=, dur=, from=, to=, poster=, controls=, x=, y=, repeatCount=, xlink:href=,
   % CSS properties
