--- a/latex/diss.bib
+++ b/latex/diss.bib
@@ -437,7 +437,7 @@ complement to the modularity and portability of native {HTML} Web Components.},
 },
 
 @online{firebasecontributors2015,
-	title = {Firebase},
+	title = {Firebase: Understanding Data},
 	url = {https://www.firebase.com/docs/web/guide/understanding-data.html},
 	author = {Firebase contributors},
 	month = mar,
@@ -687,4 +687,13 @@ Named for the Vulcanization process that turns polymers into more durable materi
 	publisher = {Pearson Education},
 	author = {Sadalage, Pramod J and Fowler, Martin},
 	year = {2012}
+},
+
+@online{firebasecontributors2015-a,
+	title = {Firebase: Understanding Security},
+	url = {https://www.firebase.com/docs/security/guide/understanding-security.html},
+	author = {Firebase contributors},
+	month = feb,
+	year = {2015},
+	howpublished = {https://www.firebase.com/docs/security/guide/understanding-security.html}
 }
