--- a/latex/codelistings.tex
+++ b/latex/codelistings.tex
@@ -67,7 +67,7 @@
   =,
   % HTML attributes
   charset=, src=, id=, width=, height=, style=, type=, rel=, href=,
-  firebaseLocation=, xtitle=, initiallyOpen=, allowAnonymous=, location=, data=,
+  firebaseLocation=, xtitle=, initiallyOpen=, allowAnonymous=, location=, data=, on-click=,
   % SVG attributes
   fill=, attributeName=, begin=, dur=, from=, to=, poster=, controls=, x=, y=, repeatCount=, xlink:href=,
   % CSS properties
