--- a/latex/diss.bib
+++ b/latex/diss.bib
@@ -45,11 +45,11 @@
 
 @online{bowercontributors2015,
 	title = {Bower},
-	url = {bower.io/search},
+	url = {http://bower.io/search},
 	abstract = {Search for Bower packages. Bower is a package manager for the web.},
 	author = {Bower Contributors},
 	year = {2015},
-	howpublished = {bower.io/search}
+	howpublished = {http://bower.io/search}
 },
 
 @online{landers2015,
@@ -696,4 +696,14 @@ Named for the Vulcanization process that turns polymers into more durable materi
 	month = feb,
 	year = {2015},
 	howpublished = {https://www.firebase.com/docs/security/guide/understanding-security.html}
+},
+
+@online{polymercontributors2015-d,
+	title = {Layout Attributes},
+	url = {https://www.polymer-project.org/0.5/docs/polymer/layout-attrs.html},
+	abstract = {Polymer includes a declarative layout system built on top of {CSS} Flexbox. Features in {CSS} Flexbox are exposed as attributes you include on elements.},
+	author = {Polymer contributors},
+	month = mar,
+	year = {2015},
+	howpublished = {https://www.polymer-project.org/0.5/docs/polymer/layout-attrs.html}
 }
