--- a/latex/chapter-approach.tex
+++ b/latex/chapter-approach.tex
@@ -127,7 +127,7 @@ such as moving the user photo to a different location.
 The desktop version in Figure~\ref{f:demo1} shows the user photo to the left of the main post area, 
 but the mobile version in Figure~\ref{f:mobile1} above shows how the user photo is moved to the right side of the post header. 
 A CSS\index{CSS} \tcode{@media}\index{@media} rule for small screens disables the indentation of replies shown at the bottom of Figure~\ref{f:demo1}. 
-The extensive use of CSS flex\index{Flex} box attributes ensures that structural elements like headers and toolbars automatically adjust their layout to available space. 
+The extensive use of CSS flex\index{Flex} box attributes ensures that structural elements like headers and toolbars automatically adjust their layout to available space~\cite{polymercontributors2015-d}. 
 This will be described in more detail in section~\ref{sec:responsive}.
 
 \section{Polymer and Web Components}
@@ -193,7 +193,9 @@ JSON\index{JSON}\footnote{JavaScript Object Notation (JSON)\index{JSON} is a pop
 but its free-form structure compared to XML\index{XML} can be both a blessing and a curse.  
 It mirrors the syntax for writing data structure literals in the JavaScript\index{JavaScript} language.} 
 for securing\index{security} and validating user actions.
-The use of Firebase as the only server component allows for easy deployment of Speakur with minimal dependencies, helping to keep the component small and focused.
+The use of Firebase as the only server component allows for easy deployment\index{deployment} of Speakur with minimal dependencies, helping to adhere to the principles of ``think small'' and ``be useful right out of the box'' from above.
+%Although Speakur's Firebase library uses the WebSockets protocol for data transfer and network event notification, 
+%Firebase also provides a RESTful programming interface that uses the standard HTTP protocol.
 
 \subsection{RESTful API}
 Firebase\index{Firebase} can be used by itself as the sole provider of data services to an application, as Speakur does, or else it can be used as an auxiliary to other services or REST\index{REST} APIs\index{API}.
@@ -231,7 +233,7 @@ curl --request DELETE $DATABASE/posts/$PARENT/$POST
 Of course, the server would be expected to check your authorization to delete this resource.
 Viewing (reading) the post is done with a simple \tcode{GET}\index{HTTP!GET} request.
 Creating a brand new post can be done with \tcode{PUT}\index{HTTP!PUT}.
-Updating an existing post's text is done with \tcode{POST}\index{HTTP!POST}.
+Updating an existing post's text is done with the \tcode{POST}\index{HTTP!POST} verb.
 By default, the resources are \textit{represented} as JSON\index{JSON} encoded data, 
 but a client can request an alternative representation such as XML\index{XML}.
 The storage format for the resource `at rest' in the server database is irrelevant from the API\index{API} perspective.
@@ -277,13 +279,13 @@ other than the Firebase cloud service,
 that means the security mechanisms that do things like prevent users from deleting each other's posts 
 must be implemented entirely within Firebase security rules.
 This is discussed in more detail in section~\ref{sec:security}.
-Confidentiality of in-transit data is handled with the same Transport Layer Security (TLS)\index{transport layer security (TLS)}, 
-better known as the secure socket layer (SSL)\index{secure socket layer (SSL)} or HTTPS\index{HTTP!HTTPS}.
 
 Firebase implements the two major categories of access control: authentication\index{authentication} and 
 authorization\index{authorization}. 
 Authentication (sometimes abbreviated \textit{authn}) answers the question ``who are you?'' 
 while authorization (\textit{authz}) asks ``what are you allowed to see and do?''~\cite{stallings2011}.
+Confidentiality of in-transit data is handled with Transport Layer Security (TLS)\index{transport layer security (TLS)}, 
+better known as the secure socket layer (SSL)\index{secure socket layer (SSL)} or HTTPS\index{HTTP!HTTPS}.
 
 
 \subsection{Authentication}
@@ -307,7 +309,7 @@ Here is an excerpt for the \tcode{posts} resource from the security rules file:
 
 \begin{changemargin}{-0.5cm}{-1cm}
 \begin{lstlisting}[language=JavaScript,caption=
-{Security rule for \tcode{posts} (user messages).},label=l:sec_rule1,captionpos=below]
+{Security rules for the \tcode{posts} table (user messages).},label=l:sec_rule1,captionpos=below]
 "posts": {
   ".read": true, // anyone can read posts
   ".write": false,  // deny modification by default
@@ -382,6 +384,7 @@ which are not subject to Same-Origin Policy\index{Same-Origin Policy} restrictio
 This allows Speakur to be used on a site without that site having installed a copy of its files or directly serving them to clients.
 
 \subsection{Dependencies}
+\label{sec:dependencies}
 Like most applications, Speakur\index{Speakur} relies heavily on other libraries and frameworks to implement some of its underlying behaviors. 
 Some of these libraries in turn depend on other libraries.
 Collectively, all of the 3rd party modules required to run Speakur\index{Speakur} are called \textit{dependencies}\index{dependencies}.
@@ -410,3 +413,4 @@ file to reduce the number of HTTP\index{HTTP} requests.
 Minification\index{minify} removes all comments, whitespace and non-essential elements from the code to compact it and reduce transfer times.
 Whether using Vulcanize results in an overall faster site ultimately depends on a number of factors including how and when the components are used.
 For that reason, empirical testing is needed to know whether it should be used in production on a real site~\cite{polymercontributors2015-a}.
+Table~\ref{table:speakurloading} illustrates how Vulcanize helps improve loading performance in three browsers.
