--- a/latex/chapter-implementation.tex
+++ b/latex/chapter-implementation.tex
@@ -3,7 +3,9 @@
 @\emph{Implementation}}%
 
 \section{Overview}
-Speakur\index{Speakur} is delivered as a single Custom Element\index{Custom Elements}, \tcode{<speakur-discussion>}\index{<speakur-discussion>}.
+Speakur\index{Speakur} is an HTML5\index{HTML!HTML5} web application that uses the Polymer\index{Polymer} framework's Web Components\index{Web Components} architecture.
+It is primarily a client side application with no dedicated server component other than Firebase\index{Firebase}.
+It is delivered as a single Custom Element\index{Custom Elements}, \tcode{<speakur-discussion>}\index{<speakur-discussion>}.
 You import the tag with \tcode{<link rel=import href=...>} to make it available to place on the page. 
 This element has a data-bound\index{data-bound template} \tcode{<template>}\index{<template>} that provides the element's visual representation (shadow DOM).
 Actually, a custom element's representation, or logical DOM\index{Logical DOM}, may consist of both encapsulated shadow DOM\index{Shadow DOM} as well as light DOM\index{Light DOM} that is supplied by the \textit{user} of the custom element and \textit{projected} into the shadow DOM as discussed in section~\ref{bg:shadowdom}.
@@ -63,7 +65,7 @@ $User~Interface$\\
 \tcode{<speakur-lang-select>} & Dropdown to choose the UI language. \\
 \bottomrule
 \end{tabular}
-\caption{A partial list of Speakur's internal components.}
+\caption{Partial list of Speakur's internal components.}
 \label{table:speakurcomponents}
 \end{table}
 
@@ -71,9 +73,9 @@ Internally, Speakur\index{Speakur} is composed of a number of sub-components, a 
 These components are listed in three broad categories: structural containers, 
 logical services, 
 and user interface\index{user interface (UI)} elements.
-The structural elements provide a container and abstraction layer for a group of related child elements, such as \tcode{<speakur-card>}, 
-which provides a Material Design-styled\index{Material Design} `card' consisting of a header, body, and footer.
-These containers may have certain visible elements such as lines around the border, but most of their representation comes from the components inside.
+The structural elements provide a container and abstraction layer for a group of related child elements.
+For example, \tcode{<speakur-card>} provides a Material Design-styled\index{Material Design} generic `card' consisting of a styled header, body, and footer.
+These containers may have certain visible elements such as lines around their border, but most of their representation comes from the components inside.
 
 The logical service elements do not have any visual representation at all.
 They perform data-related services, provide purely abstract APIs, and wrap external libraries.
@@ -88,7 +90,7 @@ Following the \tcode{<firebase-element>}\index{<firebase-element>} example,
 I created a simple custom element wrapper around the \textbf{i18next} 
 JavaScript\index{JavaScript} library~\cite{i18nextcontributors2015}.
 This wrapper is called \tcode{<speakur-i18next>}\index{<speakur-i18next>}. 
-It tells i18next where to find Speakur's translation files and creates a Polymer \textit{expression} to perform translations from data-bound templates. 
+It tells i18next where to find Speakur's translation files and creates a Polymer \textit{filter} to perform translations from data-bound templates\index{data-bound template}. 
 See section~\ref{sec:i18n} below for details.
 Logical elements are also used to provide abstract `controllers' 
 (in the MVC\index{model-view-controller} sense), 
@@ -115,7 +117,7 @@ for example \tcode{<speakur-post>} is used for a `live editor preview' inside \t
 Some of Speakur's internal components like \tcode{<speakur-theme>} are also `base classes' for other elements
 in a way that is similar but not identical to classes in object oriented programming (OOP)\index{object oriented programming (OOP)}\footnote{Note that JavaScript\index{JavaScript} itself is \textit{prototype}-based\index{prototype \textit{(JavaScript)}} and does not have traditional classes or inheritance. 
 Similar behavior is obtained by using regular object instances (instead of classes) as the prototype for instantiating new objects.}. 
-Although composition or \textit{has-a} relationships are generally preferred, inheritance or \textit{is-a} relationships can make sense when you truly want to be able to substitute one instance for another.
+Although composition or \textit{has-a} relationships are generally preferred, inheritance or \textit{is-a} relationships can make sense when you truly want to be able to substitute one instance for another interchangeably.
 
 \section{Database Design}
 \label{sec:database}
@@ -131,7 +133,7 @@ For example, some information about a post's author
 such as their public username, id, and photo url is saved inside each post they write 
 so that it's not necessary to look up this information separately just to display the post.
 One consequence of this is that changing your public name doesn't retroactively change the name on all of your previous posts, just new posts going forward.
-Certainly, if that name updating was deemed necessary per business requirements, it could be accomplished.
+Certainly, if that name updating was deemed necessary per business requirements it could be accomplished.
 
 % p{8cm}
 \begin{table}\centering
@@ -152,7 +154,7 @@ Table Name & Function & Key Structure \\
 \label{table:speakurtables}
 \end{table}
 
-The logical interface presented by Firebase\index{Firebase} resembles a single JavaScript\index{JavaScript} object which can contain other objects nested up to 32 levels deep~\cite{firebasecontributors2015}.
+The logical interface presented by Firebase\index{Firebase} resembles a single JavaScript\index{JavaScript} object which can contain other objects and lists nested up to 32 levels deep~\cite{firebasecontributors2015}.
 A JavaScript object is fundamentally a \tcode{key->value} mapping, also known as a hash map or (in Python\index{Python language}) as a dictionary.
 Although this nested object structure doesn't correspond exactly to traditional relational database\index{relational database} (SQL\index{SQL}) tables, 
 it is convenient to refer to the top (first) level of nested objects as ``tables''.
@@ -210,14 +212,14 @@ Figure~\ref{f:component_layout} illustrates this, with many components omitted f
 The general data flow is that bindings carry information \textit{down} from parent to child, and changes flow \textit{up} in the form of events and observed mutations.
 Two-way bindings are possible in that a child element can modify a bound variable and the value would be reflected in the parent and vice-versa, 
 but in some scenarios this makes it difficult to determine an `authoritative' value 
-or cause other circularity problems.
+or causes other circularity problems.
 For this reason, bindings should be used one-way across component lines,
 but two-way bindings are useful within a component to update its `data model' automatically from user input~\cite{polymercontributors2015-b}.
 
 Each component keeps its own \tcode{<firebase-element>}\index{<firebase-element>} to pull data from Firebase\index{Firebase} as needed,
 or in some cases the relevant object is passed in as a binding from a parent element that has its own \tcode{<firebase-element>}\index{<firebase-element>}.
-This keeps database specific knowledge localized to each component.
-Speakur\index{Speakur} as a whole doesn't know or care what storage solution its individual components use whether Firebase\index{Firebase} or another API\index{API}.
+This keeps database specific knowledge localized to each component, helping it ``be composable''.
+Speakur\index{Speakur} as a whole doesn't know or care what storage solution its individual components use, whether Firebase\index{Firebase} or another API\index{API}.
 
 \subsection{Data Bindings and Events}
 \label{sec:databindings}
@@ -236,7 +238,7 @@ The \tcode{data=} attribute on
 allows binding a variable in a component to a remote database object:
 
 \begin{lstlisting}[language=HTML5,caption={Binding the \tcode{post} variable to a database record.},label=l:fb_bind,captionpos=below]
-<!-- speakur-post.html -->
+<!-- from speakur-post.html -->
 <firebase-element
    data="{{ post }}"
    location="{{ fbLocation(firebaseLocation, 'posts', parentId, postId) }}">
@@ -266,7 +268,7 @@ reinforcing separation of concerns.
 When the user selects a new language it fires an event that bubbles up to the top level \tcode{<speakur-discussion>} element:
 
 \begin{lstlisting}[language=JavaScript,caption={Firing a language change event.},label=l:fire_event,captionpos=below]
-// speakur-lang-select.js
+// from speakur-lang-select.js
 domReady: function () {
     // listen for core-select event fired by the dropdown menu
     this.$.menu.addEventListener('core-select', function (e) {
@@ -290,23 +292,22 @@ This property is then used in translation expressions as discussed in section~\r
 Speakur translates internal variables (the model) into visible output with the use of data-bound templates\index{data-bound template}.
 This is similar in effect to the model-view-controller\index{model-view-controller} design pattern.
 As mentioned above, the custom element itself is the `model' and its \tcode{<template>} is the view.
-This allows embedding variables directly in the HTML representation of a component as shown in Listing~\ref{l:dbtemplate}.
+This allows embedding variables directly in the HTML representation of a component as shown in Listing~\ref{l:dbtemplate} and here:
 
 \begin{lstlisting}[language=HTML5,caption={User interface control with data bindings (edit post link).},label=l:bind_ui,captionpos=below]
-<!-- speakur-post-footer.html -->
-<template 
- if="{{canEditPost(post, globals.profile, globals.isAdmin)}}">
-  <div on-click="{{editPost}}">
-    {{ 'Edit' | $$(lc) }}
-  </div>
-</template>
+<!-- from speakur-post-footer.html -->
+<div on-click="{{editPost}}" hidden?=
+    "{{!canEditPost(post, globals.profile, globals.isAdmin)}}">
+  {{ 'Edit' | $$(lc) }}
+</div>
 \end{lstlisting}
 
-There are three data bindings with \tcode{\{\{ \}\}} in the example above:
+There are three data bindings with \tcode{\{\{ \}\}} in Listing~\ref{l:bind_ui}:
 \begin{enumerate}
-\item The \tcode{<template>} binds to \tcode{canEditPost} to determine if the \tcode{<div>} containing the Edit link should be shown on a post. I.e, is this user allowed to edit this post.
-\item The \tcode{<div>} binds its click event to \tcode{editPost} so it functions as a link. The \tcode{editPost} method will be called when this is clicked.
-\item The inner content of the \tcode{<div>} (its light DOM) is bound to a Polymer filter expression that translates ``Edit'' to the current language. 
+\item The \tcode{hidden?=} attribute (provided by Polymer\index{Polymer}) binds to \tcode{canEditPost} to determine if the Edit link should be shown under a post. 
+In other words, is this user allowed to edit this post? If not, hide this Edit \tcode{<div>}.
+\item The \tcode{<div>} binds its click event to \tcode{editPost} so it functions as a link. The \tcode{editPost} method of this component will be called when the Edit link is clicked.
+\item The inner content of the \tcode{<div>} (its light DOM) is bound to a Polymer filter expression that translates the word ``Edit'' to the current language. 
 \end{enumerate}
 
 The \tcode{\{\{ \}\}} operators are not limited to binding to simple variables.
@@ -324,10 +325,11 @@ Authentication ensures that we know the identity of anyone making database chang
 and the Firebase\index{Firebase} security rules enforce authorization requirements.
 
 \subsection{Authentication}
-Speakur\index{Speakur} currently supports signing in users (authenticating\index{authentication}) with Google\index{Google} and Facebook\index{Facebook} profiles.
+Speakur\index{Speakur} currently supports signing in (authenticating\index{authentication}) users with Google\index{Google} and Facebook\index{Facebook} profiles.
 This avoids the need to create a dedicated user registration and password system by using single sign-on\index{single sign-on (SSO)} with popular Internet identity providers.
 In this scenario, Google or Facebook is an OAuth\index{OAuth} identity provider (IdP),
 and Firebase\index{Firebase} (standing in for Speakur) is a service provider (SP).
+The identity provider gives the service provider a limited selection of personal information, generally their name, profile picture, and email address.
 The user authenticates directly to the chosen IdP (e.g. Facebook\index{Facebook}) and their password is never sent to Firebase or Speakur.
 Future versions may support additional identity providers like GitHub\index{GitHub} and Twitter\index{Twitter} as well as Firebase's\index{Firebase} own simple user registration system.
 
@@ -380,19 +382,19 @@ Of course, the users' posts themselves are not translated; just the application'
 
 The i18next library loads translation strings out of JSON\index{JSON} files, one for each supported language.
 The current translations were obtained by taking the English language file and passing it through the Microsoft\index{Microsoft} Translation API\index{API} using `Eurgh!'\index{Eurgh},
-a Python\index{Python} package that I wrote for another project.~\cite{landers2015-b}.
+a Python\index{Python} package that I wrote for another project~\cite{landers2015-b}.
 The i18next library includes the ability to handle variable interpolation insertion points and pluralization rules which are important for producing grammatically correct text.
 Here is a short excerpt from the English file followed by the Russian version:
 
 \begin{lstlisting}[language=JavaScript,caption=
 {String resources for internationalization\index{internationalization}.},label=l:i18n,captionpos=below]
-// speakur-en.json
+// from speakur-en.json
 {
   "View Comments": null,
   "replies_count": "__count__ reply",
   "replies_count_plural": "__count__ replies"
 }
-// speakur-ru.json
+// from speakur-ru.json
 {
   "View Comments": "Посмотреть комментарии",
   "replies_count": "ответ __count__",
@@ -404,53 +406,115 @@ Here is a short excerpt from the English file followed by the Russian version:
 %    "apples_oranges": "Мэри имеет __apples__ яблоки и апельсины __oranges__.",
 
 This example shows that with the \tcode{'View Comments'} key, the corresponding value can be null if the key itself can serve as the text. 
-An example of interpolating two named variables (\tcode{apples} and \tcode{oranges}) is provided, 
-along with another for pluralizing a string based on a numeric count, in this case the number of replies a post has.
+The other two keys illustrate variable interpolation and pluralization logic where different grammatical forms can be selected based on a numeric variable, 
+in this case the number of replies that a post has.
 These translation strings would be used in a template like:
 
 \begin{lstlisting}[language=HTML5,caption={Internationalizing a data-bound template.},label=l:i18n_template,captionpos=below]
+<!-- from speakur-post.html -->
 <div class='post-replies-count'>
   {{ 'replies' | $$({count: replyCount}, lc) }}
 </div>
 \end{lstlisting}
 
-\tcode{i18next}\index{i18next library} sees that a \tcode{count} variable is provided to \tcode{\$\$} and looks for the key (replies) with either a \tcode{\_count} or a \tcode{\_count\_plural} suffix depending on the cardinality of \tcode{count}.
-The \tcode{lc} variable reflects the user's current language (locale) setting, such as \tcode{lc=en} for English.
-Interestingly, the \tcode{lc} variable is not required by the \tcode{\$\$} filter at this point,
-but is included in the expression simply to register a value dependency with Polymer\footnote{
-Polymer expression dependencies are implemented internally with DOM mutation observers\index{mutation observers}~\cite{polymercontributors2015-b}.} 
-such that when the locale is changed elsewhere, all dependent expressions are recalculated, or in this case, the strings are re-translated to the current locale.
+\tcode{i18next}\index{i18next library} sees that a \tcode{count} variable is provided to \tcode{\$\$} and looks for that key (\tcode{rep\-lies}) with either a \tcode{\_count} or a \tcode{\_count\_plural} suffix depending on the cardinality of \tcode{count}.
+In this expression the \tcode{lc} variable (the second parameter to the \tcode{\$\$} call) reflects the user's current language setting, such as \tcode{lc=en} for English or \tcode{lc=ru} for Russian.
+Interestingly, the \tcode{lc} variable is \textit{not} required by the \tcode{\$\$} filter because it already knows the current locale.
+Instead, \tcode{lc} is included in the expression merely to register a value dependency with Polymer\index{Polymer}
+such that when the locale is changed elsewhere, all dependent expressions are recalculated, or in this case, the strings are re-translated to the current 
+locale\footnote{
+Polymer expression dependencies are implemented internally with DOM mutation observers\index{mutation observers}~\cite{polymercontributors2015-b}.}.
 In this case it would output something like ``1 reply'' or ``2 replies'' as needed.
+Otherwise Polymer\index{Polymer} wouldn't bother to recalculate this expression when the locale (\tcode{lc}) changed because none of its direct clauses had acquired different values.
+Adding \tcode{lc} to this expression ensures that the text is updated when the language changes.
 
 %\subsection{Architecture}
 %\subsection{Libraries}
 
-Another important localization feature is provided by the moment.js library\index{moment.js library}, 
-which focuses specifically on localizing \textit{dates and times}.
-The date/time translations into specific languages are not provided by Speakur, 
-but are included in moment.js itself.
+Another powerful internationalization\index{internationalization} feature is provided by the moment.js library\index{moment.js library}, 
+a general purpose date/time library that also provides localizing\index{localization} services.
+The date/time localizations are not provided by Speakur\index{Speakur} but are included in moment.js itself.
 In addition to formatting dates and times (like the time of a post) according to local conventions, 
 it also provides a \tcode{fromNow} function that outputs a localized ``ago'' string --- the amount of time elapsed since a certain point such as ``10 seconds ago'' or ``3 weeks ago''.
 Speakur\index{Speakur} uses this in post headers to show how long ago they were posted,
 and ties them to a timer-based value dependency such that the ``ago time'' updates automatically on the page as time passes. 
 For example, immediately after posting a new reply, its header will say ``posted a few moments ago.'' 
 After a minute it will say ``posted a minute ago'', and so on in idiomatic fashion appropriate to the current language.
+This text has a tooltip which gives the localized full date such as ``Wednesday, March 11th 2015 7:53 pm''.
 
 \section{Responsive Design}
 \label{sec:responsive}
 As mentioned in section~\ref{bg:mobile}, Speakur\index{Speakur} uses several techniques to achieve a design that automatically responds\index{responsive design} to different devices and screen sizes, 
 including mobile phones.
+The three main responsive design techniques used in Speakur are:
+\begin{enumerate}
+\item Using CSS\index{CSS} \tcode{@media}\index{@media} rules to apply different styles such as sizes and margins to different screen sizes.
+\item Using CSS Flexible boxes (a.k.a `flex') layout with \tcode{wrap} options to create structures like toolbars while allowing them to gracefully rearrange on smaller screens.
+\item Using a JavaScript variable (\tcode{smallScreen}) to control the behavior of data-bound templates\index{data-bound template} and provide a different experience on smaller devices.
+\end{enumerate}
 
-%\subsection{Mobile Users}
+In Speakur's style sheets, a small screen is treated as the base case and 
+larger tablet or desktop-style devices are given extra rules with \tcode{@media}.
+For example, the following rule gives the main Speakur container more padding on large screen devices:
 
-%\subsection{Accessibility}
+\begin{lstlisting}[language=HTML5,caption={CSS @media rule for large screen devices.},label=l:responsive_media,captionpos=below]
+<!-- from speakur-discussion.css -->
+@media only screen and (min-device-width : 800px) {
+  :host .speakur-body-container {
+    margin: 4px;
+    padding: 8px;
+  }
+}
+\end{lstlisting}
+
+CSS Flexible boxes\index{Flex} are little too complex to explain here in full, 
+but the gist is that \tcode{div}s, and nearly any other element, can be given `flex layout' attributes that provide guidance to browsers about how to align the components inside and adjust for available space.
+Polymer\index{Polymer} provides convenient layout shortcuts for the standard CSS attributes~\cite{polymercontributors2015-d}.
+%For example, the following sets up a `header' with the equally 
+
+%\begin{lstlisting}[language=HTML5,caption={CSS\index{CSS} Flexible boxes\index{Flex} for device-responsive\index{responsive} layout.},label=l:responsive_flex,captionpos=below]
+%<!-- from speakur-thread-view.html -->
+%\end{lstlisting}
 
 
 \section{Publishing and Deployment}
 \label{publishing}
 
-Speakur published to \tcode{github.io}, 
-a static web host and content delivery network for GitHub\index{GitHub} projects, 
-which allows users to import the component without hosting it themselves.
+Speakur\index{Speakur} is published to \tcode{github.io}, 
+a static web host and content delivery network for GitHub\index{GitHub} projects.
+This allows users to import the component without hosting it themselves.
 Web authors can also host Speakur's files on their own server if desired.
+This makes it very easy to deploy\index{deployment} Speakur in a wide variety of system architectures.
+Speakur\index{Speakur} is provided in two versions; 
+the `development' version where each resource is provided as a separate, raw, non-minified file,
+and a `production' or Vulcanized version where all necessary resources are combined into a single file for faster loading speeds~\cite{polymercontributors2015-a}. 
+In a relatively small application like Speakur the difference is not huge, especially on Google Chrome\index{Google!Google Chrome} which already supports Web Components natively,
+because the HTML component transfer times are largely dwarfed by the cost of loading the actual discussion from the database.
+Future protocol enhancements like HTTP 2\index{HTTP!HTTP 2.0} may eliminate this discrepancy.
+That said, vulcanization does offer current benefits,
+as shown in 
+Table~\ref{table:speakurloading} which compares the time (in milliseconds) to initially display the Speakur component and then fully load a thread with 25 comments.
 
+% p{8cm}
+\begin{table}\centering
+\ra{1.3}
+\begin{tabular}{@{}lrr@{}}
+\toprule
+State & Raw & Vulcanized \\
+\midrule
+\textit{Google Chrome}\index{Google!Google Chrome} \\ 
+visible & 2200 & 1150 \\
+complete & 4200 & 2900 \\
+\\
+\textit{Mozilla Firefox}\index{Mozilla!Mozilla Firefox}\index{Firefox} \\ 
+visible & 7400 & 6050 \\
+complete & 12000 & 10500 \\
+\\
+\textit{Opera}\index{Opera} \\ 
+visible & 2800 & 1100 \\
+complete & 7000 & 2800 \\
+\bottomrule
+\end{tabular}
+\caption{Loading time (in milliseconds) in three browsers.}
+\label{table:speakurloading}
+\end{table}
