--- a/latex/chapter-introduction.tex
+++ b/latex/chapter-introduction.tex
@@ -54,7 +54,7 @@ much less a full-fledged dynamic application,
 out of Lego-like reusable building blocks seemed like a distant dream at best. 
 The introduction of the 
 JavaScript\index{JavaScript}\footnote{JavaScript, also rendered as Javascript or JS, 
-has no significant relationship to Sun's (now Oracle's) popular Java\index{Java} programming language. JavaScript is formally standardized under the name ECMAScript (ES)\index{ECMAScript}.}
+has no significant relationship to Sun's (now Oracle's) popular Java\index{Java} programming language. JavaScript is formally standardized under the name ECMAScript (ES)\index{ECMAScript (JavaScript)}.}
 (JS)\index{JavaScript} programming language to web browsers in 1995 allowed for a completely new dimension of dynamic behavior that was not possible before~\cite{w3ccontributors2012}.
 Eventually web apps like Gmail\index{GMail} and Google Docs\index{Google!Google Docs}, powered by JavaScript, rivaled traditional desktop applications in functionality and usability while being instantly accessible from nearly anywhere.
 Still, web apps had to be stitched together `by hand' in ways that carefully ensured the different parts didn't step on each other's toes, else disaster frequently ensued. 
@@ -87,7 +87,7 @@ That is, until engineers from Google\footnote{
 As of March 2015, Google's Chrome\index{Google!Google Chrome} browser is the most popular desktop browser~\cite{zachte2015}.}
 \index{Google}
 and Mozilla\footnote{
-The Mozilla Foundation is the sponsor of the popular Firefox web browser. It grew out of Netscape, whose Navigator browser helped bring the web to a mass audience.}
+The Mozilla Foundation is the sponsor of the popular Firefox\index{Firefox}\index{Mozilla!Mozilla Firefox} web browser. It grew out of Netscape, whose Navigator browser helped bring the web to a mass audience.}
 \index{Mozilla} 
 and other organizations got together in 2012 under a W3C Web Applications Working Group\index{Web Applications Working Group}~\cite{w3c2015} 
 to draft a new standard called \textbf{Web Components} that will extend and enhance HTML5\index{HTML!HTML5} in ways that could have a significant long-term impact~\cite{yveslafon2015}. 
